--- a/src/pages/newList.scss
+++ b/src/pages/newList.scss
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@use "../App.scss";
 
 .new-list {
   width: 1000px;
@@ -15,7 +16,7 @@
 }
 
 .new-list-button {
-  background-color: #242F9B;
+  background-color: App.$primary-color;
   color: #ffffff;
   width: 80px;
   height: 40px;
