--- a/src/pages/editTask.scss
+++ b/src/pages/editTask.scss
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@use "../App.scss";
 
 .edit-task {
   width: 1000px;
@@ -15,8 +16,8 @@
 }
 
 .delete-task-button {
-  color: #ff3333;
-  border: solid 1px #ff3333;
+  color: App.$danger-color;
+  border: solid 1px App.$danger-color;
   width: 80px;
   height: 40px;
   margin: 25px 5px;
@@ -24,7 +25,7 @@
 }
 
 .edit-task-button {
-  background-color: #242F9B;
+  background-color: App.$primary-color;
   color: #ffffff;
   width: 80px;
   height: 40px;
@@ -32,5 +33,5 @@
 }
 
 .error-message {
-  color: #ff3333;
+  color: App.$danger-color;
 }
