--- a/src/pages/newTask.scss
+++ b/src/pages/newTask.scss
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@use "../App.scss";
 
 .new-task {
   width: 1000px;
@@ -19,7 +20,7 @@
 }
 
 .new-task-button {
-  background-color: #242F9B;
+  background-color: App.$primary-color;
   color: #ffffff;
   width: 80px;
   height: 40px;
@@ -27,5 +28,5 @@
 }
 
 .error-message {
-  color: #ff3333;
+  color: App.$danger-color;
 }
