--- a/src/pages/signUp.scss
+++ b/src/pages/signUp.scss
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@use "../App.scss";
 
 .signup {
   width: 500px;
@@ -17,7 +18,7 @@
 }
 
 .signup-button {
-  background-color: #242F9B;
+  background-color: App.$primary-color;
   color: #ffffff;
   width: 100px;
   height: 40px;
@@ -25,5 +26,5 @@
 }
 
 .error-message {
-  color: #ff3333;
+  color: App.$danger-color;
 }
