--- a/src/pages/signin.scss
+++ b/src/pages/signin.scss
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@use "../App.scss";
 
 .signin {
   width: 500px;
@@ -21,7 +22,7 @@
 }
 
 .signin-button {
-  background-color: #242F9B;
+  background-color: App.$primary-color;
   color: #ffffff;
   width: 100px;
   height: 40px;
@@ -29,5 +30,5 @@
 }
 
 .error-message {
-  color: #ff3333;
+  color: App.$danger-color;
 }
