--- a/src/pages/editTask.scss
+++ b/src/pages/editTask.scss
@@ -10,7 +10,7 @@
   color: #555555;
 }
 
-.edit-task-title, .edit-task-detail {
+.edit-task-title, .edit-task-limit, .edit-task-detail {
   width: 300px;
   margin-bottom: 25px;
 }
