--- a/src/pages/newTask.scss
+++ b/src/pages/newTask.scss
@@ -10,7 +10,7 @@
   color: #555555;
 }
 
-.new-task-select-list, .new-task-title, .new-task-detail {
+.new-task-select-list, .new-task-title, .new-task-limit, .new-task-detail {
   width: 300px;
   margin-bottom: 25px;
 }
